[package]
name = "plato-threshold"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Adaptive threshold calculation for PLATO deadband filters"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
